<resources>
    <string name="app_name">Liburan Kuy</string>
    <string name="slogan">Liburan, Bukan Lemburan. Enjoy Life!</string>
    <string name="slogan_menu">Jangan Sibuk Terus. Nikmati Hidup Kamu!</string>
    <string name="get_started1_judul">Rencanakan Liburanmu Sekarang!</string>
    <string name="get_started2_judul">Banyak Rekomendasi Tujuan Liburan!</string>
    <string name="get_started3_judul">Nah, Makanya Liburan kuy! \nYa kali Gak Kuy!</string>
    <string name="get_started1_sub">Jangan sibuk terus dong. \nKayanya kamu butuh liburan, deh!</string>
    <string name="get_started2_sub">Gak perlu pusing mikirin tujuan. \nKarena kita sediain beberapa rekomendasi \ntempat wisata yang keren, kok!</string>
    <string name="login_masuk">Masuk</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="nama_label">Nama Lengkap</string>
    <string name="hobi_label">Hobi</string>
    <string name="btn_lanjut">Lanjut</string>
    <string name="btn_kembali">Kembali</string>
    <string name="btn_lewati">Lewati</string>
    <string name="btn_jelajah">Mulai Menjelajah Yuk!</string>
    <string name="btn_ubah_profil">Ubah Profil</string>
    <string name="btn_logout">Keluar</string>
    <string name="btn_ticket">Lihat Tiket</string>
    <string name="btn_menu_utama">Menu Utama</string>
    <string name="menu_utama">Menu Utama</string>
    <string name="isi_saldo">Isi Saldo</string>
    <string name="saldo_kamu_1">Saldo Kamu</string>
    <string name="saldo_kamu_2">Yuk isi saldo kamu, \nbiar bisa liburan terus!</string>
    <string name="beranda">Beranda</string>
    <string name="nama">Nailul Firdaus</string>
    <string name="bio">Petualang</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="bayar_tiket">Bayar Sekarang</string>
    <string name="refund_tiket">Refund Tiket</string>
    <string name="tiket_kamu_1">Tiket Kamu</string>
    <string name="tiket_kamu_2">Lihat detail tiketnya disini</string>
    <string name="info_1">Informasi</string>
    <string name="info_2">Ketahui Sebelum Berkunjung</string>
    <string name="info_pisa">Menara Pisa sebenarnya dibuat berdiri secara vertikal, tapi mulai menjadi miring setelah pembangunannya yang dimulai pada Agustus 1173.</string>
    <string name="info_bali">Pura adalah istilah untuk tempat ibadat agama Hindu di Indonesia. Pura di Bali sebagai pulau yang mempunyai mayoritas penduduk penganut agama Hindu.</string>
    <string name="info_jogja">Candi berbentuk stupa ini didirikan oleh para penganut agama Buddha Mahayana sekitar tahun 800-an Masehi pada masa pemerintahan wangsa Syailendra.</string>
    <string name="info_jakarta">Monumen Nasional didirikan untuk mengenang perlawanan dan perjuangan rakyat Indonesia untuk merebut kemerdekaan dari kolonial Hindia Belanda.</string>
    <string name="info_paris">Dinamai sesuai nama perancangnya, Gustave Eiffel, Menara Eiffel adalah bangunan tertinggi di Paris dan salah satu struktur terkenal di dunia.</string>
</resources>
