<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1_with_human"
    tools:context=".GetStarted1">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="35dp"
        android:src="@drawable/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/mmedium"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorFontDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/intro_app1"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/mmedium"
        android:text="@string/get_started1_judul"
        android:textAlignment="center"
        android:textColor="@color/colorFontDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/subintro_app1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subintro_app1"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/mlight"
        android:text="@string/get_started1_sub"
        android:textAlignment="center"
        android:textColor="@color/colorFontDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_lanjut"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/mregular"
        android:text="@string/btn_lanjut"
        android:textAlignment="textEnd"
        android:textColor="@color/colorFontDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/btn_lewati"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/mregular"
        android:text="@string/btn_lewati"
        android:textAlignment="textStart"
        android:textColor="@color/colorFontDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>