<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3_with_human"
    tools:context=".GetStarted3">

    <ImageView
        android:id="@+id/btn_kembali"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/mmedium"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorFontDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintStart_toEndOf="@+id/btn_kembali"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/intro_app3"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginBottom="180dp"
        android:fontFamily="@font/mmedium"
        android:text="@string/get_started3_judul"
        android:textAlignment="center"
        android:textColor="@color/colorFontDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_login"
        style="@style/btn_no_shadow_violet"
        android:layout_marginBottom="10dp"
        android:text="@string/login_masuk"
        app:layout_constraintBottom_toTopOf="@+id/btn_buatAkun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_buatAkun"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/bg_btn_white_stroke"
        android:fontFamily="@font/mmedium"
        android:text="@string/buat_akun"
        android:textAllCaps="false"
        android:textColor="@color/colorFontDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>