<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".MyBalanceActivity">

    <ImageView
        android:id="@+id/btn_kembali"
        android:layout_width="50dp"
        android:padding="15dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/back_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/saldo_kamu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:fontFamily="@font/mmedium"
        android:text="@string/saldo_kamu_1"
        android:textColor="@color/blackPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/mlight"
        android:text="@string/saldo_kamu_2"
        android:textAlignment="center"
        android:textColor="@color/blackPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saldo_kamu" />

    <ImageView
        android:id="@+id/pic_saldo"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="85dp"
        android:src="@drawable/gs3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mmedium"
        android:text="Total Saldo Kamu"
        android:layout_marginBottom="5dp"
        android:textColor="@color/blackPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/user_balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/user_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mmedium"
        android:textColor="@color/greenPrimary"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_bayar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/btn_bayar"
        android:layout_marginBottom="10dp"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:background="@drawable/bg_btn_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/mmedium"
            android:gravity="center"
            android:text="@string/isi_saldo"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>